Tested that the writeToFile() method works.